fixed navbar and components shifting issues

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -71,6 +71,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground max-w-screen-xl justify-center w-screen mx-auto ;
+    @apply bg-background text-foreground;
   }
 }
